# playerltvstudio

./: .gitignore  CLAUDE.md  README.md  railpack.toml
.claude/: settings.local.json
.github/workflows/: backend-tests.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/api/: main.py
backend/data/: generate_events.py
backend/data/raw/: README.md
backend/db/migrations/: 001_create_tables.sql  002_create_ltv_scores.sql  003_create_campaign_results.sql
backend/etl/: pipeline.py  schemas.py
backend/models/: campaign_model.py  ltv_model.py
backend/tests/: test_etl.py  test_ltv_model.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/campaigns/: page.tsx
frontend/app/players/: PlayersClient.tsx  page.tsx
frontend/components/: KpiCard.tsx  LayoutShell.tsx  RoasChart.tsx  SegmentBadge.tsx  SegmentDonut.tsx  Sidebar.tsx
frontend/lib/: api.ts
